config for mapping, fix sbt for shapeless, add main function